login modal variables may differ from the original to make the element more readable some selectors are not very specific due to reddit's horrible layout making it near impossible to select certain elements could not fix the login with apple button

--- a/src/config/temp css/new.css
+++ b/src/config/temp css/new.css
@@ -149,6 +149,19 @@ input {
     --button-border-color: var(--darkreader-border--button-border-color-activated) !important;
 }
 
+/* Login modal */
+.bg-ui-modalbackground {
+    background-color: var(--darkreader-bg--color-neutral-background-selected) !important;
+}
+
+auth-flow-modal {
+    background-color: transparent !important;
+}
+
+:host([appearance="secondary"]) .label-container {
+    background-color: var(--darkreader-bg--color-secondary-background) !important;
+}
+
 /* IGNORE INLINE STYLE */
 /* SVGs */
 svg {
